@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.micromata.mgc</groupId>
   <artifactId>de.micromata.mgc.rootpom</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.1.0</version>
   <packaging>pom</packaging>
 
   <organization>
     <name>Micromata GmbH</name>
-    <url>http://www.micromata.de/</url>
+    <url>https://labs.micromata.de/mgc</url>
   </organization>
   <inceptionYear>2016</inceptionYear>
   <developers>
@@ -111,8 +111,6 @@
     <spring-boot.jetty.version>9.2.14.v20151106</spring-boot.jetty.version>
     <minimal-json.version>0.9.4</minimal-json.version>
     <xstream.version>1.4.4</xstream.version>
-    <!-- ARGLINE -->
-    <argLine>-XX:MaxPermSize=268m</argLine>
 
 
   </properties>
@@ -253,4 +251,13 @@
 
 
 
+  <scm>
+    <url>https://github.com/micromata/mgc.git</url>
+    <developerConnection>Roger Rene Kommer</developerConnection>
+  </scm>
+  <issueManagement>
+    <system>JIRA</system>
+    <url>https://labs.micromata.de/jira/projects/MGC</url>
+  </issueManagement>
+  <url>https://labs.micromata.de/mgc</url>
 </project>
